# ai-developer-os

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py
docker/: .dockerignore  Dockerfile.dev
docs/: AI_MENTOR_CONTEXT.md  PROJECT_CONTEXT.md
docs/adr/: 0001-use-app-directory.md  0002-use-uv-for-dependency-management.md  0003-git-branching-strategy.md  ADR_Format.md
docs/development/: ENVIRONMENT_STRATEGY.md
docs/learning/: 01-modern-python-project-management.md  02-project-configuration-and-environment-management.md  03-docker-and-containerization.md  Structure_Standard_Template.md
docs/operations/: docker-storage-and-resources.md
docs/progress/: MASTER_TRACKER.md
docs/reference/: docker-commands.md
