[project]
name = "ai-developer-os"
version = "0.1.0"
description = "Production-grade AI Developer Platform built with FastAPI, AI, and modern DevOps practices."
readme = "README.md"
authors = [
    { name = "Lakshmi Narayana Malineni" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
